improvement for format prints